we changed background to blue and added a header navigation to the page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 
 
 <body>
+    <header>
+        <a href="/home.html">home</a>
+        <a href="/about.html">about</a>
+        <a href="/contact.html">contact</a>
+        <a href="/home.html">home</a>
+    </header>
     <p>this is a great tutorial</p>
     <footer>copyrights to codingphase</footer>
 </body>
