--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <a href="/map.html">map</a>
     </header>
     <p>this is a great tutorial</p>
+    <aside><img src="ad.jpg"></aside>
     <footer>copyrights to codingphase</footer>
 </body>
 
