added unordered list

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 
 <body>
     <p>this is a great tutorial</p>
+    <ul>
+        <li>one</li>
+        <li>two</li>
+        <li>three</li>
+    </ul>
     <footer>copyrights to codingphase</footer>
 </body>
 
